# MDO

./: .gitignore  intro.org  readme.md  readme.org
Assignments/1/diags/: TVRemote-ze.drawio  TVRemote.drawio  i2c_read_flowchart.drawio
Assignments/1/report/: dissertation.slg  dissertation.sls  dissertation.tex
Assignments/1/report/bib/: dissert.bib
Assignments/1/report/img/: 2-3-vdes.eps  linear-vel-funcs-comparison.eps  obs-phase-portrait-1.eps  obs-scenario1-facing-front.eps  tar-2-1.eps  tar-4-4.eps
Assignments/1/report/listing/: api.h  program_dyn_obs_tar_lyapunov.m  program_dyn_obs_tar_nonlinear.m  program_dyn_tar.m  program_dyn_tar_vel.m
Assignments/1/report/sec/: acronyms.tex
Assignments/1/report/sty/: dissertation-xelatex.sty  listing.sty
Proj/: db.html  db.md  db.org  readme.html  readme.md  readme.org
Proj/PCB/: template.pcb  template.sch
Proj/code/LS/Daemon/: CMakeLists.txt  ussdaemon.cpp
Proj/code/LS/Daemon/toolchain/: rasptoolchain.cmake
Proj/code/LS/LSApp/: CMakeLists.txt  ad.cpp  ad.h  frag.cpp  frag.h  fragDiffuser.cpp  fragDiffuser.h  fragManager.h  imgfilter.h  imgfiltwindow.cpp  imgfiltwindow.h  imgfiltwindow.ui  interwindow.cpp  interwindow.h  interwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  msgqueue.cpp  normalwindow.cpp  normalwindow.ui  pEvent.cpp  post.cpp  post.h  readme.org  resources.qrc  sharwindow.cpp  sharwindow.h  sharwindow.ui  syncObject.cpp  syncObject.h
Proj/code/LS/LSApp-rasp/: CMakeLists.txt  ad.cpp  ddDigitalOut.h  fragDiffuser.h  fragManager.cpp  imgfilter_defs.h  imgfiltwindow.h  imgfiltwindow.ui  interwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  msgqueue.cpp  msgqueue.h  normalwindow.cpp  (+9 more)
Proj/code/LS/LSApp/backup-files/: CMakeLists.txt
Proj/code/LS/LSApp/build_rasp/: CMakeCache.txt  cmake_install.cmake
Proj/code/LS/LSApp/resources/style/: stylesheet.qss
Proj/code/LS/LSApp/toolchain/: rasptoolchain.cmake
Proj/code/LS/LSApp/twitter/: api.txt
Proj/code/RC/remote-client/: CMakeLists.txt  adminwindow.cpp  adminwindow.h  adminwindow.ui  brandwindow.cpp  brandwindow.h  brandwindow.ui  db-namespaces.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  remote-client_en_150.ts
Proj/code/computer-vision/gesture-recog/Opencv/: CMakeLists.txt  closedfist.cpp  facewithtracker.cpp
Proj/code/computer-vision/qt-test/opencv-cmake-test/: CMakeLists.txt  mainwindow.cpp
Proj/code/computer-vision/qt-test/opencv-cmake-test/build_cmake/: CMakeCache.txt  cmake_install.cmake  testCmake
Proj/code/computer-vision/qt-test/opencv-cmake-test/build_rasp/: CMakeCache.txt  cmake_install.cmake  testCmake
Proj/code/computer-vision/qt-test/opencv-cmake-test/toolchain/: rasptoolchain.cmake
Proj/code/curl/: readme.md
Proj/code/imagemagick++/: CMakeLists.txt  CMakeLists_old.txt  basic.cpp  opencvMagick.cpp  readImages.cpp
Proj/code/mqueues/: ls_mqueue  ls_mqueue.cpp  ls_mqueue_daemon  ls_mqueue_daemon.cpp
Proj/code/mysqlconn/: CMakeLists.txt
Proj/code/pthreads/condVar/: CMakeLists.txt  main.cpp
Proj/code/tcp/: client.c  server  server.c
Proj/code/twitter/twitcurl/rasp/libtwitcurl/: CMakeLists.txt
Proj/code/twitter/twitcurl/rasp/libtwitcurl/build_rasp/: CMakeCache.txt  Makefile  cmake_install.cmake
Proj/code/twitter/twitcurl/rasp/libtwitcurl/toolchain/: rasptoolchain.cmake
Proj/code/twitter/twitcurl/rasp/twitterClient-static/: CMakeLists.txt  Makefile  twitterClient.cpp
Proj/code/twitter/twitcurl/rasp/twitterClient-static/build_rasp/: CMakeCache.txt  Makefile  cmake_install.cmake  twitcurlstatic
Proj/code/twitter/twitcurl/rasp/twitterClient-static/include/: twitcurl.h
Proj/code/twitter/twitcurl/rasp/twitterClient-static/token-old/: twitterClient_token_key.txt
Proj/code/twitter/twitcurl/rasp/twitterClient-static/toolchain/: rasptoolchain.cmake
Proj/code/video/videographicsitem/: CMakeLists.txt  main.cpp  videoplayer.cpp  videoplayer.h
Proj/diags/: HW_Architecture.drawio  MDO-Analysis-Ze.drawio  MDO-Analysis.drawio
Proj/diags/old/: MDO-Analysis-Ze.drawio  hw-arch.drawio
Proj/planning/: MDO.pod  budget-estimation.csv  budget-estimation.ods  proj-hours.ods
Proj/presentations/: Implementation_Group8.pptx  Phase1_a50178_JosePires_a88258_HugoFreitas.pptx  Phase1_group8.pptx  ProblemStatement_a50178_JosePires_a88258_HugoFreitas.pptx
Proj/report/: dissertation.tex  makefile
Proj/report/bib/: dissert.bib
Proj/report/img/: 2-3-g-v.eps  linear-vel-funcs-comparison-shift.eps  obs-phase-portrait-2.eps
Proj/report/listing/: CMakeLists.txt  Doxyfile  S_LS_Init.sh  camera-example.cpp  daemon_ex.c  doxygen_example.c  doxygen_example.cpp  doxygen_example.h  filter-example.py  http-post-ex.cpp  init.txt  insert-values.txt  makefile_example  program_dyn_obs.m  program_dyn_tar_2_1.m  program_dyn_tar_2_2.m  pthreads_api.c  qt-usage-ex.cpp  rasptoolchain.cmake  rc-adminwindow.cpp  rc-brandwindow.cpp  rc-brandwindow.h  rc-mainwindow.cpp  video-play-class.cpp  video-play.cpp
Proj/report/listing/DDrivers/Frag/: Makefile  fragmodule.c
Proj/report/listing/DDrivers/USS/: Makefile  hc-sro4.c
Proj/report/listing/Daemon/: ussdaemon.cpp
Proj/report/listing/LSApp/: CMakeLists.txt  ad.h  ddDigitalOut.cpp  ddDigitalOut.h  frag.h  fragDiffuser.h  fragManager.cpp  fragManager.h  imgfilter.cpp  imgfilter.h  imgfiltwindow.cpp  mainwindow.h  mainwindow.ui  msgqueue.cpp  msgqueue.h  normalwindow.h  pEvent.h  periodicTask.cpp  post.h  resources.qrc  sharwindow.cpp  threads.cpp
Proj/report/listing/LSApp/fragrances/: db.txt
Proj/report/listing/LSApp/resources/style/: stylesheet.qss
Proj/report/listing/LSApp/toolchain/: rasptoolchain.cmake
Proj/report/sec/: acronyms.tex  symbols.tex
Proj/report/sty/: dissertation-xelatex.sty  hyphenation.sty  listing.sty
Proj/report/tables/: budget-estimation.tgn  events-local.tgn  events-rc.tgn  events-rs.tgn  gesture-recognition-table.odt  hw-spending.tgn  pin-mapping.tgn  relational-model-example.tgn  test-cases-ls.tgn  test-cases-rc.tgn  test-cases-rs.tgn  test-cases.tgn
Proj/report/tex/: .#.tex  commands_usage.tex
Proj/sec/icons/: icons_set.odg
(+463 files in other folders)
